# audiobooksyncer

./: .gitignore  Dockerfile  README.md  check.sh  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: docs.yaml  main.yaml
audiobooksyncer/: __main__.py  pathstore.py  utils.py
audiobooksyncer/core/: __init__.py  chapter_locator.py  config.py  constants.py  output_generator.py  text_audio_aligner.py  texts_aligner.py  utils.py
audiobooksyncer/scripts/: cli.py
backend/: chapter_locator.py  text_audio_aligner.py  texts_aligner.py  utils.py
docs/: generate_docs.md  linting-formatting-type-checking.md  linting.md  performance.md
sphinx-docs/: conf.py  index.rst
sphinx-docs/locale/uk/LC_MESSAGES/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/core/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/core/chapter_locator/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/core/config/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/core/output_generator/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/core/text_audio_aligner/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/core/texts_aligner/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/core/utils/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/pathstore/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/scripts/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/scripts/cli/: index.po
sphinx-docs/locale/uk/LC_MESSAGES/autoapi/audiobooksyncer/utils/: index.po
