[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobooksyncer"
version = "1.0.0"
dependencies = [
    "ffmpeg-python >= 0.2.0, < 1",
    "thefuzz >= 0.22.1, < 1",
    "aeneas @ git+https://github.com/atlantis-11/aeneas.git",
    "bertalign @ git+https://github.com/atlantis-11/bertalign.git",
    "openai-whisper @ git+https://github.com/openai/whisper.git@v20231117"
]

[project.optional-dependencies]
cli = [
  "click"
]

[project.scripts]
audiobooksyncer-cli = "audiobooksyncer.scripts.cli:main"

[tool.setuptools.packages.find]
include = ["audiobooksyncer*"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
ignore_missing_imports = true
